2002-03-11  Corinna Vinschen  <corina@vinschen.de>

	* fork.cc (fork_child): Call fixup_mmaps_after_fork() before
	closing parent process handle.  Call fixup_mmaps_after_fork()
	with parent process handle as parameter.
	* mmap.cc (mmap_record::access): New method.
	(fixup_mmaps_after_fork): Take process handle as parameter.
	In case of FILE_MAP_COPY access, copy valid memory regions to child.
	* pinfo.h (fixup_mmaps_after_fork): Change prototype accordingly.

2002-03-07  Corinna Vinschen  <corina@vinschen.de>

	* autoload.cc (NetGetDCName): Add symbol.
	(NetServerEnum): Remove symbol.
	* security.cc (get_lsa_srv_inf): Call NetGetDCName() instead of
	NetServerEnum() since it's faster.  Don't call it at all if machine
	is not a domain member.

2002-03-06  Christopher Faylor  <cgf@redhat.com>

	* path.cc (normalize_posix_path): Avoid runs of '.'s > 2.

2002-03-05  Christopher Faylor  <cgf@redhat.com>

	* errno.cc: Change EPERM associated text to "Operation not permitted"
	throughout.

2002-03-05  Christopher Faylor  <cgf@redhat.com>

	* fhandler_socket.cc (fhandler_socket::close): Respond to signals while
	looping, waiting for socket to close.  Superstitiously clear last error
	when WSAEWOULDBLOCK.

2002-03-05  Robert Collins  <rbtcollins@hotmail.com>

	* cygserver_transport_pipes.cc (transport_layer_pipes::transport_layer_pipes): 
	Always init - until static members work correctly.
	* shm.cc (shmget): Initialize the security descriptor - thanks Corinna!
	* include/sys/ipc.h: Make the ipc control constants partitioned off from the sem 
	control constants.

2002-03-04  Christian Lestrade  <christian.lestrade@free.fr>

	* include/sys/termios.h: Define _POSIX_VDISABLE.  Define CCEQ macro.
	* fhandler_termios.cc: Include <sys/termios.h>.
	(line_edit): Recognize disabled c_cc[] chars.  Ignore VDISCARD when
	not in ICANON mode.

2002-03-04  Dmitry Timoshkov  <dmitry@baikal.ru>

	* syscalls.cc (truncate64): Use ftruncate64 directly to not lose
	upper 32 bits.
